--- a/mydjango/docker-compose.yml
+++ b/mydjango/docker-compose.yml
@@ -1,17 +1,6 @@
 version: '3'
 
 services:
-  django:
-    build: .
-    container_name: django
-    command: python manager.py runserver 0.0.0.0:8000
-    volumes:
-      - .:/usr/src/app
-    ports:
-      - "8000:8000"
-    depends_on:
-      - pgdb
-
   pgdb:
     image: postgres
     environment: 
@@ -21,6 +10,17 @@ services:
     container_name: pgdb
     volumes:
       - pgdbdata:/var/lib/postgresql/data/
+  
+  django:
+    build: .
+    container_name: django    
+    volumes:
+      - .:/usr/src/app
+    command: python manage.py runserver 0.0.0.0:8000
+    ports:
+      - 8000:8000
+    depends_on:
+      - pgdb
 
 volumes:
   pgdbdata: null
